external-crates/move/crates/move-compiler/tests/move_check/parser/function_conflicting_visibility.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/function_conflicting_visibility.move:2:20
  │
2 │     public(friend) public(package) fun t0() {}
  │     -------------- ^^^^^^^^^^^^^^^ Duplicate 'public' modifier
  │     │               
  │     'public' modifier previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/function_conflicting_visibility.move:3:21
  │
3 │     public(package) public(friend) fun t1() {}
  │     --------------- ^^^^^^^^^^^^^^ Duplicate 'public' modifier
  │     │                
  │     'public' modifier previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/function_conflicting_visibility.move:4:12
  │
4 │     public public(package) fun t2() {}
  │     ------ ^^^^^^^^^^^^^^^ Duplicate 'public' modifier
  │     │       
  │     'public' modifier previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/function_conflicting_visibility.move:5:21
  │
5 │     public(package) public fun t3() {}
  │     --------------- ^^^^^^ Duplicate 'public' modifier
  │     │                
  │     'public' modifier previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/function_conflicting_visibility.move:6:12
  │
6 │     public public(friend) fun t4() {}
  │     ------ ^^^^^^^^^^^^^^ Duplicate 'public' modifier
  │     │       
  │     'public' modifier previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/function_conflicting_visibility.move:7:20
  │
7 │     public(friend) public fun t5() {}
  │     -------------- ^^^^^^ Duplicate 'public' modifier
  │     │               
  │     'public' modifier previously given here

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/function_conflicting_visibility.move:9:12
  │
9 │     public public fun s0() {}
  │     ------ ^^^^^^ Duplicate 'public' modifier
  │     │       
  │     'public' modifier previously given here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/parser/function_conflicting_visibility.move:10:21
   │
10 │     public(package) public(package) fun s1() {}
   │     --------------- ^^^^^^^^^^^^^^^ Duplicate 'public' modifier
   │     │                
   │     'public' modifier previously given here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/parser/function_conflicting_visibility.move:11:20
   │
11 │     public(friend) public(friend) fun s2() {}
   │     -------------- ^^^^^^^^^^^^^^ Duplicate 'public' modifier
   │     │               
   │     'public' modifier previously given here

