external-crates/move/crates/move-compiler/tests/move_check/parser/function_conflicting_visibility.move
module 0x0::M {
    public(friend) public(package) fun t0() {}
    public(package) public(friend) fun t1() {}
    public public(package) fun t2() {}
    public(package) public fun t3() {}
    public public(friend) fun t4() {}
    public(friend) public fun t5() {}

    public public fun s0() {}
    public(package) public(package) fun s1() {}
    public(friend) public(friend) fun s2() {}
}
